fix composer update

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "fureev/laravel-support",
+  "name": "efureev/laravel-support",
   "description": "PHP Support Package for Laravel",
   "license": "MIT",
   "type": "library",
