--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "~8.5",
-    "phpstan/phpstan": "~0.12",
+    "orchestra/testbench": "^4.5",
     "squizlabs/php_codesniffer": "^3.5",
     "feugene/php-cs-fixer": "^1.0"
   },
