--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,9 @@ install:
   - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest --prefer-stable; fi
 #  - if [[ $setup = 'lowest' ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest --prefer-lowest; fi
 
+before_script:
+  - psql -c 'create database testing;' -U postgres
+
 script:
   - if [[ $coverage = 'true' ]]; then composer test-cover; else composer test; fi
 
