--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -1,30 +1,56 @@
-name: PHP Composer
+name: PHP Laravel Package
 
 on: [push]
 
 jobs:
   testing:
-    name: Test on node ${{ matrix.php_version }}
+    name: Test on node ${{ matrix.php }}
 
     runs-on: ubuntu-latest
 
     strategy:
       matrix:
-        php_version: ['7.2', '7.3', '7.4']
+        setup: ['basic', 'lowest']
+        php: ['7.2', '7.3', '7.4']
 
     steps:
     - uses: actions/checkout@v2
-      
-    - name: Use PHP ${{ matrix.php_version }}
-      uses: actions/setup-php@v1
-      with:
-        php-version: ${{ matrix.php_version }}
 
-    - name: Validate composer.json and composer.lock
+    - name: Use PHP ${{ matrix.php }}
+      uses: shivammathur/setup-php@v1 # Action page: <https://github.com/shivammathur/setup-php>
+      with:
+        php-version: ${{ matrix.php }}
+        extensions: mbstring
+
+    - name: Get Composer Cache Directory # Docs: <https://github.com/actions/cache/blob/master/examples.md#php---composer>
+        id: composer-cache
+        run: |
+          echo "::set-output name=dir::$(composer config cache-files-dir)"
+
+    - name: Cache dependencies
+      uses: actions/cache@v1
+      with:
+        path: ${{ steps.composer-cache.outputs.dir }}
+        key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+        restore-keys: |
+          ${{ runner.os }}-composer-
+
+    - name: Validate composer.json
       run: composer validate
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress --no-suggest
+    - name: Install Composer 'hirak/prestissimo' package
+        run: composer global require hirak/prestissimo --update-no-dev
+
+    - name: Install [LOWEST] Composer dependencies
+        if: matrix.setup == 'lowest'
+        run: composer update --prefer-dist --no-interaction --no-suggest --prefer-lowest
+
+    - name: Install [BASIC] Composer dependencies
+        if: matrix.setup == 'basic'
+        run: composer update --prefer-dist --no-interaction --no-suggest
+
+    - name: Show most important packages' versions
+        run: composer info | grep -e efureev -e laravel/framework -e phpunit/phpunit
 
     # Add a test script to composer.json, for instance: "test": "vendor/bin/phpunit"
     # Docs: https://getcomposer.org/doc/articles/scripts.md
