--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -13,6 +13,18 @@ jobs:
         setup: ['basic', 'lowest']
         php: ['7.2', '7.3', '7.4']
 
+    services:
+      postgres:
+        image: postgres:10
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: ''
+          POSTGRES_DB: testing
+        ports:
+          - 5432:5432
+        # needed because the postgres container does not provide a healthcheck
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
     steps:
     - uses: actions/checkout@v2
 
@@ -57,3 +69,6 @@ jobs:
 
     - name: Run test suite
       run: composer test
+      env:
+        DB_HOST: localhost
+        DB_PORT: ${{ job.services.postgres.ports[5432] }}
