--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,8 @@
     "phpunit/phpunit": "~8.5",
     "orchestra/testbench": "^4.5",
     "squizlabs/php_codesniffer": "^3.5",
-    "feugene/php-cs-fixer": "^1.0"
+    "feugene/php-cs-fixer": "^1.0",
+    "fzaninotto/faker": "^1.9"
   },
   "autoload": {
     "psr-4": {
