--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Lint changelog file
         uses: avto-dev/markdown-lint@v1
         with:
-          rules: '/lint/rules/changelog.js'
+          rules: './.github/workflows/lint/rules/changelog.js'
           config: '/lint/config/changelog.yml'
           args: './CHANGELOG.md'
 
