--- a/composer.json
+++ b/composer.json
@@ -18,14 +18,13 @@
   "require": {
     "php": ">=7.2",
     "ext-json": "*",
-    "efureev/support": "^2.5",
+    "efureev/support": "^2.5.0",
     "illuminate/database": "^6.11 | ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "~8.5",
+    "phpunit/phpunit": "^9.0.0",
     "orchestra/testbench": "^4.5",
     "squizlabs/php_codesniffer": "^3.5",
-    "feugene/php-cs-fixer": "^1.0",
     "fzaninotto/faker": "^1.9"
   },
   "autoload": {
