--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -38,22 +38,20 @@ jobs:
         setup: ['basic', 'lowest']
         php: ['7.2', '7.3', '7.4']
 
-    env:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: ''
-      POSTGRES_DB: testing
-
     services:
       postgres:
         image: postgres:11
         env:
           POSTGRES_USER: postgres
-          POSTGRES_PASSWORD: ''
-          POSTGRES_DB: testing
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: postgres
         ports:
           - 5432:5432
-        # needed because the postgres container does not provide a healthcheck
-        options: --health-cmd pg_isready --health-interval 15s --health-timeout 5s --health-retries 5
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
       - uses: actions/checkout@v2
