--- a/.travis.yml
+++ b/.travis.yml
@@ -41,8 +41,8 @@ matrix:
   include:
 #    - php: 7.2
 #      env: setup=lowest
-    - php: 7.2
-      env: setup=stable
+#    - php: 7.2
+#      env: setup=stable
 
 #    - php: 7.3
 #      env: setup=lowest
