--- a/composer.json
+++ b/composer.json
@@ -22,8 +22,8 @@
     "illuminate/database": "^6.11 | ^7.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5.2 | ^9.0.0",
-    "orchestra/testbench": "^4.5",
+    "phpunit/phpunit": "^8.5.2 | ^9.0",
+    "orchestra/testbench": "^4.5 | ^5",
     "squizlabs/php_codesniffer": "^3.5",
     "fzaninotto/faker": "^1.9"
   },
