--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,10 @@
     }
   ],
   "require": {
-    "php": ">=7.2",
+    "php": ">=7.3",
     "ext-json": "*",
     "efureev/support": "^2.6",
-    "illuminate/database": "^6.11 | ^7.0"
+    "illuminate/database": "^7.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.5.2 | ^9.0",
