--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,16 @@
     }
   ],
   "require": {
-    "php": ">=7.3",
+    "php": "^7.4|^8.0",
     "ext-json": "*",
-    "efureev/support": "^2.12",
-    "illuminate/database": "^7.0"
+    "efureev/support": "^3.0",
+    "illuminate/database": "^7.30.3|^8.22.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.5.2 | ^9.0",
-    "orchestra/testbench": "^4.5 | ^5",
+    "phpunit/phpunit": "^9.5",
+    "orchestra/testbench": "^5.14",
     "squizlabs/php_codesniffer": "^3.5",
-    "fzaninotto/faker": "^1.9"
+    "fakerphp/faker": "^1.13"
   },
   "autoload": {
     "files": [
