--- a/composer.json
+++ b/composer.json
@@ -16,16 +16,15 @@
     }
   ],
   "require": {
-    "php": "^7.4|^8.0",
-    "ext-json": "*",
-    "efureev/support": "^3.0",
-    "illuminate/database": "^7.30.3|^8.22.1"
+    "php": "^8.0",
+    "efureev/support": "^4.1",
+    "illuminate/database": "^8.38"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5",
-    "orchestra/testbench": "^5.14",
-    "squizlabs/php_codesniffer": "^3.5",
-    "fakerphp/faker": "^1.13"
+    "orchestra/testbench": "^6.17",
+    "squizlabs/php_codesniffer": "^3.6",
+    "fakerphp/faker": "^1.14"
   },
   "autoload": {
     "files": [
@@ -37,11 +36,10 @@
   },
   "autoload-dev": {
     "psr-4": {
+      "Php\\Support\\Laravel\\Tests\\Database\\Factories\\": "tests/database/factories",
+      "Php\\Support\\Laravel\\Tests\\Database\\Seeders\\": "tests/database/seeders",
       "Php\\Support\\Laravel\\Tests\\": "tests/"
-    },
-    "classmap": [
-      "tests/database/seeds"
-    ]
+    }
   },
   "extra": {
     "laravel": {
