--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -22,8 +22,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        setup: [ 'basic', 'lowest' ]
-        php: [ '8.0' ]
+        setup: [ 'basic', 'lowest', 'stable' ]
+        php: [ '8.0','8.1' ]
 
     services:
       postgres:
