--- a/composer.json
+++ b/composer.json
@@ -18,13 +18,13 @@
   "require": {
     "php": "^8.0 || ^8.1",
     "efureev/support": "^4.13",
-    "illuminate/database": "^8.78"
+    "illuminate/database": "^8.78|^9.25"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.25",
-    "fakerphp/faker": "^1.19",
-    "marcocesarato/php-conventional-changelog": "^1.13",
-    "orchestra/testbench": "^6.24",
+    "ergebnis/composer-normalize": "^2.28.3",
+    "fakerphp/faker": "^1.20",
+    "marcocesarato/php-conventional-changelog": "^1.15.1",
+    "orchestra/testbench": "^6.24|^7.6",
     "phpunit/phpunit": "^9.5",
     "squizlabs/php_codesniffer": "^3.6"
   },
