--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "^8.1 | ^8.2",
+    "php": "^8.1 || ^8.2",
     "efureev/support": "^4.17",
     "illuminate/database": "^10.1"
   },
