--- a/composer.json
+++ b/composer.json
@@ -16,17 +16,17 @@
     }
   ],
   "require": {
-    "php": "^8.1",
-    "efureev/support": "^4.17",
-    "illuminate/database": "^10.1"
+    "php": "^8.2",
+    "efureev/support": "^v4.27",
+    "illuminate/database": "^11.0"
   },
   "require-dev": {
-    "ergebnis/composer-normalize": "^2.29",
-    "fakerphp/faker": "^v1.21.0",
-    "marcocesarato/php-conventional-changelog": "^1.15.1",
-    "orchestra/testbench": "^8.0",
-    "phpunit/phpunit": "^10.0",
-    "squizlabs/php_codesniffer": "^3.7"
+    "ergebnis/composer-normalize": "^2.42",
+    "fakerphp/faker": "^v1.23",
+    "marcocesarato/php-conventional-changelog": "^1.17",
+    "orchestra/testbench": "^9.0",
+    "phpunit/phpunit": "^11.0",
+    "squizlabs/php_codesniffer": "^3.9"
   },
   "autoload": {
     "psr-4": {
