--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
   ],
   "require": {
     "php": "^8.2",
-    "efureev/support": "^v4.27",
+    "efureev/support": "^4.27",
     "illuminate/database": "^11.0"
   },
   "require-dev": {
     "ergebnis/composer-normalize": "^2.42",
-    "fakerphp/faker": "^v1.23",
+    "fakerphp/faker": "^1.23",
     "marcocesarato/php-conventional-changelog": "^1.17",
     "orchestra/testbench": "^9.0",
     "phpunit/phpunit": "^11.0",
