--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
   ],
   "require": {
     "php": "^8.2",
-    "efureev/support": "^4.27|^5.0",
+    "efureev/support": "^4.27 || ^5.0",
     "illuminate/database": "^11.0"
   },
   "require-dev": {
@@ -25,6 +25,7 @@
     "fakerphp/faker": "^1.23",
     "marcocesarato/php-conventional-changelog": "^1.17",
     "orchestra/testbench": "^9.0",
+    "phpstan/phpstan": "^2.0",
     "phpunit/phpunit": "^11.5",
     "squizlabs/php_codesniffer": "^3.9"
   },
@@ -65,6 +66,7 @@
   "scripts": {
     "cs-fix": "@php ./vendor/bin/phpcbf",
     "phpcs": "@php ./vendor/bin/phpcs",
+    "phpstan": "@php ./vendor/bin/phpstan analyze -c phpstan.neon --no-progress --ansi",
     "phpunit": "@php ./vendor/bin/phpunit --no-coverage --testdox --colors=always",
     "phpunit-cover": "@php ./vendor/bin/phpunit --coverage-text",
     "postversion": "git push && git push --tag",
